<resources>
    <string name="app_name">Onotes</string>
    <string name="double_click_exit">再点击一次退出</string>
    <string name="prompt_email">电子邮件</string>
    <string name="prompt_password">密码 （可选）</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">此电子邮件地址无效</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">此密码不正确</string>
    <string name="error_field_required">此字段是必需的</string>
    <string name="permission_rationale">"联系人权限需要提供电子邮件完成"。</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="action_settings">设置</string>
    <string name="section_format">你好世界从科: %1$ d</string>
    <string name="onboarding_next_button_description">下一个</string>
    <string name="onboarding_finish_button_description">完成</string>
    <string name="onboarding_pre_button_description">上一个</string>
    <string name="onboarding_section_1">欢迎来到 Onotes ~ ！</string>
    <string name="onboarding_intro_1">此应用程序中有一些令人兴奋的功能。</string>
    <string name="onboarding_section_2">它为您设计了强大的编辑功能。如 balalalala。</string>

    <string name="onboarding_intro_2">如 balalalala。</string>
    <string name="onboarding_section_3">它还有一个智能机器人</string>
    <string name="onboarding_intro_3">当您太无聊时，它不仅可以与您聊天，也可以帮助您查找一些东西，包括天气，您的快递，等等。</string>

    <string name="about">关于</string>
    <string name="version">版本︰ V1.0.0</string>
    <string name="rate">评分</string>
    <string name="rate_description">如果您喜欢 Onotes，评一下分吧</string>
    <string name="feedback">反馈BUG</string>
    <string name="feedback_description">帮助我改善 Onotes 吧</string>
    <string name="author">作者</string>
    <string name="author_name">成文杰</string>
    <string name="author_description">中国 广东省</string>
    <string name="follow_me_on_github">在 GitHub 上关注我</string>
    <string name="github_url">https://github.com/strivexj</string>
    <string name="addqqgroup">加入 QQ 群</string>
    <string name="qqgroupnumber">311357701</string>
    <string name="support">支持</string>
    <string name="sendto">mailto:strivexj@gmail.com</string>
    <string name="mail_topic">Onotes 反馈 / 建议</string>
    <string name="device_model">设备版本︰</string>
    <string name="sdk_version">SDK 版本︰</string>
    <string name="no_mail_app">没有检测到邮件程序</string>
    <string name="no_app_store_found">没有检测到应用商店程序</string>
    <string name="no_browser_found">没有检测到浏览器</string>
    <string name="follow_me_on_zhihu">在知乎上关注我</string>
    <string name="zhihu_url">https://www.zhihu.com/people/cheng-wen-jie-37</string>
    <string name="zhihu_account">成文杰</string>
    <string name="contactme">与我联系</string>
    <string name="copied_to_clipboard">已经复制到剪贴板</string>
    <string name="copied_to_clipboard_failed">复制失败</string>
    <string name="added_to_bookmarks">添加到书签</string>
    <string name="deleted_from_bookmarks">删除书签</string>
    <string name="search_bookmarks">搜索书签</string>
    <string name="check_bookmarks">书签</string>
    <string name="action_add_to_bookmarks">添加到书签</string>
    <string name="action_delete_from_bookmarks">删除书签</string>
    <string name="action_copy_text">复制文本</string>

    <string name="action_share_as_text">纯文字分享</string>

    <string name="share_to">分享到</string>
    <string name="share_extra">----- 分享于Onotes</string>
    <string name="color_or_picture">选择颜色或背景图片</string>
    <string name="reset_password_sussesfully">您的密码已重置成功 ~ ！</string>
    <string name="reset_password_failed">失败</string>
    <string name="verify_code_wrong">您输入的验证码错了</string>
    <string name="sign_in_successfully">登录成功</string>
    <string name="username_or_password_wrong">您输入的用户名或密码可能错了</string>
    <string name="authorize_successfully">授权成功</string>
    <string name="authorize_failed">授权失败</string>
    <string name="authorize_canceled">授权取消</string>
    <string name="sign_in_progress">请等待一段时间</string>

    <string name="subject">验证码</string>
    <string name="verify_email_hi">你好</string>
    <string name="verify_email_welcome">/n 欢迎注册 Onotes。您的验证码为︰</string>
    <string name="verify_email_end">/n 如果不是您申请的，请您忽略它。/n 请不要回复此电子邮件。谢谢您的合作！
    </string>

    <string name="username_registered">您的用户名已被注册。</string>

    <string name="signup_failed">注册失败</string>

    <string name="myemail">strivexj@gmail.com</string>
    <string name="mypassword">strivexj</string>
    <string name="progressDialog1">发送电子邮件中</string>
    <string name="progressDialog2">请稍候。。。</string>
    <string name="sending_successfully">验证码已发送。</string>
    <string name="writing_nothing">你还没有写东西喔 ！</string>
    <string name="dialog_title">删除</string>
    <string name="dialog_content">是否删除所有的笔记？</string>
    <string name="dialog_positive_button">是的</string>
    <string name="dialog_negative_button">取消</string>

    <string name="click_me_select_city">点击我选择一个城市吧</string>

    <string name="locate_city_failed">定位失败</string>

    <string name="loading_weather_failed">加载天气信息失败。</string>
    <string name="comfort">舒适度︰</string>
    <string name="carwash">洗车指数︰</string>
    <string name="sport_suggestion">运动建议︰</string>
    <string name="delete">删除</string>


    <!--forget_password_xml-->
    <string name="your_email">您的电子邮箱:</string>
    <string name="send_verfiy_code">发送验证码</string>
    <string name="input_verify_code_hint">请在这里输入验证码
    </string>
    <string name="reset_password">您的密码：</string>

    <string name="confirm">确定</string>

    <!--end-->

    <!--login_xml-->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="recheck_box_rememeber_password">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="buttom_sign_in">登录</string>
    <string name="new_user_sign_up">如果您没有注册，那就注册一个账号吧</string>
    <string name="other_account">其他登录方式</string>
    <string name="add_qq_group">加入QQ群</string>
    <!--end-->

    <!--main_xml-->
    <string name="settings">设置</string>
    <!--end-->


    <!--chat_xml-->
    <string name="edit_text_hint">在这里写东西吧</string>
    <string name="buttom_send">发送</string>
    <!--end-->


    <string name="log_out">退出登录</string>
    <string name="text_username">用户名：</string>
    <string name="hint_username">请输入您的用户名</string>
    <string name="text_password">密码：</string>
    <string name="hint_password">请输入您的密码</string>
    <string name="text_email">邮箱：</string>
    <string name="hint_email">请输入您的邮箱</string>
    <string name="send_verify_code">发送验证码</string>
    <string name="hint_verify_code">请在这里输入您的验证码</string>
    <string name="username_existed">您的用户名已经存在了。</string>
    <string name="email_registered">您的邮箱已经被注册了</string>
    <string name="email_invaild">您填写的邮箱无效。</string>
    <string name="confirmPassword">请再次输入您的密码</string>

    <string name="air_quality">空气质量</string>
    <string name="air_quality_index">空气质量指数</string>
    <string name="pm2_5_index">PM2.5指数</string>
    <string name="textsize">字体大小:</string>
    <string name="linespace">行距:</string>
    <string name="forecast">天气预报</string>
    <string name="personalized_signatures">点击我设置个性签名吧～</string>
    <string name="life_suggestion">生活建议</string>

    <string name="weather">天气</string>
    <string name="chat">聊天</string>
    <string name="file">文件</string>
    <string name="exercise">练习测试</string>

    <string name="chinese">简体中文</string>
    <string name="english">英语</string>
    <string name="traditional_chinese">繁体中文</string>


    <string name="send_as_pic">生成图片分享</string>

    <string name="top_to_authorise_locate">点击我设置定位权限吧</string>

    <string name="select_all">全选</string>
    <string name="cancel">取消</string>
    <string name="unselected_all">全不选</string>
    <string name="checked_hint">已选择0项</string>

    <string name="locating">定位中...</string>



    <string name="passwordCantMatch">您输入的两次密码不一样。</string>
    <string name="usernameOrPasswordNull">您还没有填写用户名或者密码</string>

    <string name="registerSuccessfully">注册成功</string>

    <string name="takepicture">拍照</string>
    <string name="choosepicture">从相册选取照片</string>
    <string name="setavatar">设置头像</string>
    <string name="private_information">个人信息</string>
    <string name="save_information">保存信息中...</string>

    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="sendingfailed">发送失败!</string>
    <string name="authorizefailed">必须同意所有权限才能使用本程序</string>
    <string name="unknownerror">unknownerror</string>
    <string name="camerapermissionrefuse">拍照权限被拒绝</string>
    <string name="SDpermissionrefused">读写内存卡内容权限被拒绝</string>
    <string name="withoutpicture">找不到照片</string>
    <string name="locationPermissionRequest">必须同意该权限才能定位喔</string>
    <string name="day_mode">日间模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="pickbgpicture">设置背景图片</string>

    <string name="reboot_revoke_hint">在您说的话前加上@便可呼唤机器人喔</string>

</resources>
