<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">


    <item
        android:id="@+id/weather"
        android:icon="@drawable/weather"
        android:title="@string/weather"/>
    <item
        android:id="@+id/chat"
        android:icon="@drawable/chat"
        android:title="@string/chat"/>
    <item
        android:id="@+id/file"
        android:icon="@drawable/filefolder"
        android:title="@string/file"/>
    <item
        android:id="@+id/popupexercise"
        android:icon="@drawable/icon"
        android:title="@string/exercise"/>

    <item
        android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="@string/about"/>
    <item
        android:id="@+id/text"
        android:icon="@drawable/icon"
        android:title="test"/>

</group>
</menu>