<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp"
    tools:context="com.example.onotes.login.SignUpActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/text_username"/>
        <com.example.onotes.view.EditTextWithDel
            android:id="@+id/signupusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"/>
        <com.example.onotes.view.EditTextWithDel
            android:id="@+id/signuppassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_email"/>

        <com.example.onotes.view.EditTextWithDel
            android:id="@+id/signupemail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textWebEmailAddress"
            android:hint="@string/hint_email"/>
        <Button
            android:id="@+id/sendverifycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_verify_code"
            android:textSize="10sp"
            android:textAllCaps="false"/>


    </LinearLayout>

    <com.example.onotes.view.EditTextWithDel
        android:id="@+id/verifycode"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:textSize="13sp"
        android:hint="@string/hint_verify_code"/>
    <Button
        android:id="@+id/signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:layout_gravity="center"
    />
</LinearLayout>
