<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    app:cardCornerRadius="15dp">
<LinearLayout

    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.onotes.login.ForgetPasswordActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_email"/>
        <com.example.onotes.view.EditTextWithDel
            android:id="@+id/forgetpasswordemail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/forgetsendcodebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_verfiy_code"
            android:textAllCaps="false"
            android:background="@drawable/roundedrectangle"
            android:textSize="10sp"/>
    </LinearLayout>
    <com.example.onotes.view.EditTextWithDel
        android:id="@+id/forgetverifycode"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/input_verify_code_hint"
        android:textSize="13sp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/reset_password"/>
        <com.example.onotes.view.EditTextWithDel
            android:id="@+id/resetpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/forgetbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirm"
        android:background="@drawable/roundedrectangle"
        android:textAllCaps="false"
    />
</LinearLayout>
</android.support.v7.widget.CardView>