<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.onotes.setting.SettingActivity">




    <RadioButton
        android:id="@+id/chinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/chinese"

    />

    <RadioButton
        android:id="@+id/traditional_chinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/traditional_chinese"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/chinese"/>

    <RadioButton
        android:id="@+id/english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/english"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/traditional_chinese"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:background="@drawable/roundedrectangle"
        android:text="@string/log_out"
        android:textAllCaps="false"/>
</LinearLayout>
